feat: serpetine sorting in bracketsGenerator done
pending: add thirdplace logic, create scheduleGeneration